Change header from 'Shayqua' to 'sanjeevani'

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ button {
 <body>
 
 <div class="container" id="main">
-  <h1>❤️ Shayqua ❤️</h1>
+  <h1>❤️ sanjeevani ❤️</h1>
   <h2>Will you be my Valentine? 💖</h2>
 
   <div class="buttons">
